// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: er preset > E01 minimal 2 entity 1 relation 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-order",
      "label": "places",
      "to": "order",
    },
  ],
  "id": "e01",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 668,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 893,
      "cy": 186,
      "h": 115,
      "id": "order",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E01",
  "viewBox": {
    "h": 235,
    "w": 1213,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: er preset > E02 3 entity (User / Order / Product) 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-order",
      "label": "places",
      "to": "order",
    },
    {
      "from": "order",
      "id": "rel-1-order-product",
      "label": "contains",
      "to": "product",
    },
  ],
  "id": "e02",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 698,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-product",
      "width": 450,
      "x": 1396,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 923,
      "cy": 186,
      "h": 115,
      "id": "order",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 1621,
      "cy": 186,
      "h": 115,
      "id": "product",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E02",
  "viewBox": {
    "h": 235,
    "w": 1941,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: er preset > E03 cardinality 1:N 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-order",
      "label": "places",
      "to": "order",
    },
  ],
  "id": "e03",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 668,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 893,
      "cy": 186,
      "h": 115,
      "id": "order",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E03",
  "viewBox": {
    "h": 261.5,
    "w": 1213,
    "x": -35,
    "y": 41.5,
  },
}
`;

exports[`golden: er preset > E04 cardinality N:N 1`] = `
{
  "edges": [
    {
      "from": "student",
      "id": "rel-0-student-course",
      "label": "enrolls (N:N)",
      "to": "course",
    },
  ],
  "id": "e04",
  "lanes": [
    {
      "height": 40,
      "id": "lane-student",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-course",
      "width": 450,
      "x": 752,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "student",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 977,
      "cy": 186,
      "h": 115,
      "id": "course",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E04",
  "viewBox": {
    "h": 235,
    "w": 1297,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: er preset > E05 entity with subtitle 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-order",
      "label": "places",
      "to": "order",
    },
  ],
  "id": "e05",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 668,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 893,
      "cy": 186,
      "h": 115,
      "id": "order",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E05",
  "viewBox": {
    "h": 235,
    "w": 1213,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: er preset > E06 4 entity ring 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "rel-0-a-b",
      "label": "ab",
      "to": "b",
    },
    {
      "from": "b",
      "id": "rel-1-b-c",
      "label": "bc",
      "to": "c",
    },
    {
      "from": "c",
      "id": "rel-2-c-d",
      "label": "cd",
      "to": "d",
    },
    {
      "from": "d",
      "id": "rel-3-d-a",
      "label": "da",
      "to": "a",
    },
  ],
  "id": "e06",
  "lanes": [
    {
      "height": 40,
      "id": "lane-a",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-b",
      "width": 450,
      "x": 664,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-c",
      "width": 450,
      "x": 1328,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-d",
      "width": 450,
      "x": 1992,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "a",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 889,
      "cy": 186,
      "h": 115,
      "id": "b",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 1553,
      "cy": 186,
      "h": 115,
      "id": "c",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 2217,
      "cy": 186,
      "h": 115,
      "id": "d",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E06",
  "viewBox": {
    "h": 337,
    "w": 2537,
    "x": -35,
    "y": -34,
  },
}
`;

exports[`golden: er preset > E07 1:1 relation 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-profile",
      "label": "has",
      "to": "profile",
    },
  ],
  "id": "e07",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-profile",
      "width": 450,
      "x": 628,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 853,
      "cy": 186,
      "h": 115,
      "id": "profile",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E07",
  "viewBox": {
    "h": 261.5,
    "w": 1173,
    "x": -35,
    "y": 41.5,
  },
}
`;

exports[`golden: er preset > E08 cardinality animation badge 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "e0-user-order",
      "label": "places",
      "to": "order",
    },
  ],
  "id": "e08",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 588,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 162,
      "h": 68,
      "id": "user",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 813,
      "cy": 162,
      "h": 68,
      "id": "order",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "show",
    },
  ],
  "states": [],
  "topic": "E08",
  "viewBox": {
    "h": 206,
    "w": 1093,
    "x": 5,
    "y": 50,
  },
}
`;

exports[`golden: er preset > E09 自己参照は輪として残る (#1227 → #1462) 1`] = `
{
  "edges": [
    {
      "from": "employee",
      "id": "rel-0-employee-employee",
      "label": "manages",
      "to": "employee",
    },
  ],
  "id": "e09",
  "lanes": [
    {
      "height": 40,
      "id": "lane-employee",
      "width": 450,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "employee",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E09",
  "viewBox": {
    "h": 235,
    "w": 790,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: er preset > E10 5 entity star schema 1`] = `
{
  "edges": [
    {
      "from": "fact",
      "id": "rel-0-fact-dima",
      "label": "a",
      "to": "dima",
    },
    {
      "from": "fact",
      "id": "rel-1-fact-dimb",
      "label": "b",
      "to": "dimb",
    },
    {
      "from": "fact",
      "id": "rel-2-fact-dimc",
      "label": "c",
      "to": "dimc",
    },
    {
      "from": "fact",
      "id": "rel-3-fact-dimd",
      "label": "d",
      "to": "dimd",
    },
  ],
  "id": "e10",
  "lanes": [
    {
      "height": 40,
      "id": "lane-fact",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-dima",
      "width": 450,
      "x": 658,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-dimb",
      "width": 450,
      "x": 1316,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-dimc",
      "width": 450,
      "x": 1974,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-dimd",
      "width": 450,
      "x": 2632,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "fact",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 883,
      "cy": 186,
      "h": 115,
      "id": "dima",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 1541,
      "cy": 186,
      "h": 115,
      "id": "dimb",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 2199,
      "cy": 186,
      "h": 115,
      "id": "dimc",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 2857,
      "cy": 186,
      "h": 115,
      "id": "dimd",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "E10",
  "viewBox": {
    "h": 337,
    "w": 3177,
    "x": -35,
    "y": -34,
  },
}
`;

exports[`golden: flow preset > F01 minimal 1 step 1`] = `
{
  "edges": [],
  "id": "f01",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 410,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 205,
      "cy": 164,
      "h": 72,
      "id": "start",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F01",
  "viewBox": {
    "h": 192,
    "w": 505,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F02 2 step 1`] = `
{
  "edges": [
    {
      "from": "start",
      "id": "e-start-end",
      "label": "go",
      "to": "end",
    },
  ],
  "id": "f02",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 410,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 205,
      "cy": 164,
      "h": 72,
      "id": "start",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 205,
      "cy": 336,
      "h": 72,
      "id": "end",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F02",
  "viewBox": {
    "h": 364,
    "w": 505,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F03 4 step linear 1`] = `
{
  "edges": [
    {
      "from": "start",
      "id": "e-start-verify",
      "label": "input",
      "to": "verify",
    },
    {
      "from": "verify",
      "id": "e-verify-save",
      "label": "ok",
      "to": "save",
    },
    {
      "from": "save",
      "id": "e-save-done",
      "label": "saved",
      "to": "done",
    },
  ],
  "id": "f03",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 164,
      "h": 72,
      "id": "start",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 215,
      "cy": 334,
      "h": 67,
      "id": "verify",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 501,
      "h": 67,
      "id": "save",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 670,
      "h": 72,
      "id": "done",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F03",
  "viewBox": {
    "h": 698,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F04 6 step + tween 1`] = `
{
  "edges": [
    {
      "from": "s0",
      "id": "e0-s0-s1",
      "label": "1",
      "to": "s1",
    },
    {
      "from": "s1",
      "id": "e1-s1-s2",
      "label": "2",
      "to": "s2",
    },
    {
      "from": "s2",
      "id": "e2-s2-s3",
      "label": "3",
      "to": "s3",
    },
    {
      "from": "s3",
      "id": "e3-s3-s4",
      "label": "4",
      "to": "s4",
    },
    {
      "from": "s4",
      "id": "e4-s4-s5",
      "label": "5",
      "to": "s5",
    },
  ],
  "id": "f04",
  "lanes": [
    {
      "height": 40,
      "id": "main",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 164,
      "h": 72,
      "id": "s0",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 215,
      "cy": 334,
      "h": 67,
      "id": "s1",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 501,
      "h": 67,
      "id": "s2",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 668,
      "h": 67,
      "id": "s3",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 835,
      "h": 67,
      "id": "s4",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 1004,
      "h": 72,
      "id": "s5",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2000,
      "id": "advance",
    },
  ],
  "states": [
    {
      "id": "step",
      "initial": 0,
    },
  ],
  "topic": "F04",
  "viewBox": {
    "h": 1124,
    "w": 534,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: flow preset > F05 tone variation (info / success / warning / error) 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e-a-b",
      "label": "ok",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e-b-c",
      "label": "good",
      "to": "c",
    },
    {
      "from": "c",
      "id": "e-c-d",
      "label": "warn",
      "to": "d",
    },
  ],
  "id": "f05",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "a",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 329,
      "h": 67,
      "id": "b",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 496,
      "h": 67,
      "id": "c",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 663,
      "h": 67,
      "id": "d",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F05",
  "viewBox": {
    "h": 688,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F06 branching (1 → 2) 1`] = `
{
  "edges": [
    {
      "from": "input",
      "id": "e-input-path1",
      "label": "left",
      "to": "path1",
    },
    {
      "from": "path1",
      "id": "e-path1-path2",
      "label": "right",
      "to": "path2",
    },
  ],
  "id": "f06",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 164,
      "h": 72,
      "id": "input",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 215,
      "cy": 334,
      "h": 67,
      "id": "path1",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 501,
      "h": 67,
      "id": "path2",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F06",
  "viewBox": {
    "h": 526,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F07 merging (2 → 1) 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e-a-b",
      "label": "→",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e-b-sink",
      "label": "in1",
      "to": "sink",
    },
  ],
  "id": "f07",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "a",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 329,
      "h": 67,
      "id": "b",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 498,
      "h": 72,
      "id": "sink",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F07",
  "viewBox": {
    "h": 526,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F08 step with guard 1`] = `
{
  "edges": [
    {
      "from": "check",
      "id": "e-check-go",
      "label": "pass",
      "to": "go",
    },
    {
      "from": "go",
      "id": "e-go-stop",
      "label": "deny",
      "to": "stop",
    },
  ],
  "id": "f08",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "check",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 331,
      "h": 72,
      "id": "go",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 215,
      "cy": 503,
      "h": 72,
      "id": "stop",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F08",
  "viewBox": {
    "h": 531,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F09 inline option mix 1`] = `
{
  "edges": [
    {
      "from": "login",
      "id": "e-login-profile",
      "label": "ok",
      "to": "profile",
    },
  ],
  "id": "f09",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 182,
      "h": 107,
      "id": "login",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 423,
      "h": 111,
      "id": "profile",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F09",
  "viewBox": {
    "h": 470,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F10 multi-phase with set 1`] = `
{
  "edges": [
    {
      "from": "boot",
      "id": "e0-boot-run",
      "label": "start",
      "to": "run",
    },
    {
      "from": "run",
      "id": "e1-run-halt",
      "label": "end",
      "to": "halt",
    },
  ],
  "id": "f10",
  "lanes": [
    {
      "height": 40,
      "id": "main",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 164,
      "h": 72,
      "id": "boot",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 215,
      "cy": 334,
      "h": 67,
      "id": "run",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 503,
      "h": 72,
      "id": "halt",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "boot",
    },
    {
      "duration_ms": 1000,
      "id": "halt",
    },
  ],
  "states": [
    {
      "id": "mode",
      "initial": "init",
    },
  ],
  "topic": "F10",
  "viewBox": {
    "h": 623,
    "w": 534,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: flow preset > F11 8 step long pipeline 1`] = `
{
  "edges": [
    {
      "from": "n1",
      "id": "e-n1-n2",
      "label": "a",
      "to": "n2",
    },
    {
      "from": "n2",
      "id": "e-n2-n3",
      "label": "b",
      "to": "n3",
    },
    {
      "from": "n3",
      "id": "e-n3-n4",
      "label": "c",
      "to": "n4",
    },
    {
      "from": "n4",
      "id": "e-n4-n5",
      "label": "d",
      "to": "n5",
    },
    {
      "from": "n5",
      "id": "e-n5-n6",
      "label": "e",
      "to": "n6",
    },
    {
      "from": "n6",
      "id": "e-n6-n7",
      "label": "f",
      "to": "n7",
    },
    {
      "from": "n7",
      "id": "e-n7-n8",
      "label": "g",
      "to": "n8",
    },
  ],
  "id": "f11",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "n1",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 329,
      "h": 67,
      "id": "n2",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 496,
      "h": 67,
      "id": "n3",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 663,
      "h": 67,
      "id": "n4",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 830,
      "h": 67,
      "id": "n5",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 997,
      "h": 67,
      "id": "n6",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 1164,
      "h": 67,
      "id": "n7",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 1331,
      "h": 67,
      "id": "n8",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F11",
  "viewBox": {
    "h": 1356,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F12 viewport with gap override 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e-a-b",
      "label": "x",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e-b-c",
      "label": "y",
      "to": "c",
    },
  ],
  "id": "f12",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "a",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 425,
      "h": 67,
      "id": "b",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 688,
      "h": 67,
      "id": "c",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F12",
  "viewBox": {
    "h": 713,
    "w": 1800,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F13 cyclic back-edge 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e-a-b",
      "label": "1",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e-b-c",
      "label": "2",
      "to": "c",
    },
  ],
  "id": "f13",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "a",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 329,
      "h": 67,
      "id": "b",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 496,
      "h": 67,
      "id": "c",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F13",
  "viewBox": {
    "h": 521,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F14 single edge with all tones 1`] = `
{
  "edges": [
    {
      "from": "x",
      "id": "e-x-y",
      "label": "go",
      "to": "y",
    },
  ],
  "id": "f14",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 430,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 215,
      "cy": 162,
      "h": 67,
      "id": "x",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 215,
      "cy": 329,
      "h": 67,
      "id": "y",
      "kind": "function",
      "w": 380,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [],
  "topic": "F14",
  "viewBox": {
    "h": 354,
    "w": 525,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: flow preset > F15 storage + event mixed kinds 1`] = `
{
  "edges": [
    {
      "from": "in",
      "id": "e-in-mid",
      "label": "put",
      "to": "mid",
    },
    {
      "from": "mid",
      "id": "e-mid-out",
      "label": "emit",
      "to": "out",
    },
  ],
  "id": "f15",
  "lanes": [
    {
      "height": 40,
      "id": "flow",
      "width": 450,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 164,
      "h": 72,
      "id": "in",
      "kind": "event",
      "w": 360,
    },
    {
      "cx": 225,
      "cy": 420,
      "h": 240,
      "id": "mid",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 225,
      "cy": 676,
      "h": 72,
      "id": "out",
      "kind": "event",
      "w": 360,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "flow",
    },
  ],
  "states": [
    {
      "id": "v",
      "initial": "x",
    },
  ],
  "topic": "F15",
  "viewBox": {
    "h": 704,
    "w": 545,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X01 subtitle only 1`] = `
{
  "edges": [],
  "id": "x01",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 586,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 293,
      "cy": 248,
      "h": 240,
      "id": "x01",
      "kind": "sequence-board",
      "w": 536,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "X01",
  "viewBox": {
    "h": 360,
    "w": 681,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X02 value placeholder 1`] = `
{
  "edges": [],
  "id": "x02",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 658,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 329,
      "cy": 248,
      "h": 240,
      "id": "x02",
      "kind": "sequence-board",
      "w": 608,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "m",
      "initial": 42,
    },
  ],
  "topic": "X02",
  "viewBox": {
    "h": 360,
    "w": 753,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X03 rows on storage 1`] = `
{
  "edges": [],
  "id": "x03",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 650,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 325,
      "cy": 248,
      "h": 240,
      "id": "x03",
      "kind": "sequence-board",
      "w": 600,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "v1",
      "initial": "a",
    },
    {
      "id": "v2",
      "initial": "b",
    },
    {
      "id": "v3",
      "initial": "c",
    },
  ],
  "topic": "X03",
  "viewBox": {
    "h": 360,
    "w": 745,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X04 labelOffsetX positive 1`] = `
{
  "edges": [],
  "id": "x04",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 606,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 303,
      "cy": 248,
      "h": 240,
      "id": "x04",
      "kind": "sequence-board",
      "w": 556,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "X04",
  "viewBox": {
    "h": 360,
    "w": 701,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X05 labelOffsetY negative 1`] = `
{
  "edges": [],
  "id": "x05",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 606,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 303,
      "cy": 248,
      "h": 240,
      "id": "x05",
      "kind": "sequence-board",
      "w": 556,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "X05",
  "viewBox": {
    "h": 360,
    "w": 701,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X06 nested {} on flow 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "rel-0-user-order",
      "label": "places",
      "to": "order",
    },
  ],
  "id": "x06",
  "lanes": [
    {
      "height": 40,
      "id": "lane-user",
      "width": 450,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-order",
      "width": 450,
      "x": 668,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 186,
      "h": 115,
      "id": "user",
      "kind": "storage",
      "w": 400,
    },
    {
      "cx": 893,
      "cy": 186,
      "h": 115,
      "id": "order",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "er",
    },
  ],
  "states": [],
  "topic": "X06",
  "viewBox": {
    "h": 269.5,
    "w": 1213,
    "x": -35,
    "y": 33.5,
  },
}
`;

exports[`golden: inline option edge cases > X07 eyebrow + subtitle combo 1`] = `
{
  "edges": [],
  "id": "x07",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 790,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 395,
      "cy": 248,
      "h": 240,
      "id": "x07",
      "kind": "sequence-board",
      "w": 740,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "X07",
  "viewBox": {
    "h": 360,
    "w": 885,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X08 viewport with laneWidth + gap 1`] = `
{
  "edges": [
    {
      "from": "x",
      "id": "c0-x-y",
      "label": "",
      "to": "y",
    },
    {
      "from": "y",
      "id": "c1-y-z",
      "label": "",
      "to": "z",
    },
  ],
  "id": "x08",
  "lanes": [
    {
      "height": 610,
      "id": "main",
      "width": 500,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 250,
      "cy": 155,
      "h": 54,
      "id": "x",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 250,
      "cy": 385,
      "h": 54,
      "id": "y",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 250,
      "cy": 615,
      "h": 54,
      "id": "z",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "X08",
  "viewBox": {
    "h": 1100,
    "w": 2000,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: inline option edge cases > X09 all 4 tones in single diagram 1`] = `
{
  "edges": [],
  "id": "x09",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 986,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 493,
      "cy": 344,
      "h": 432,
      "id": "x09",
      "kind": "sequence-board",
      "w": 936,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "X09",
  "viewBox": {
    "h": 552,
    "w": 1081,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: inline option edge cases > X10 mixed inline + bare actor names 1`] = `
{
  "edges": [],
  "id": "x10",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1186,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 593,
      "cy": 344,
      "h": 432,
      "id": "x10",
      "kind": "sequence-board",
      "w": 1136,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "n",
      "initial": 0,
    },
  ],
  "topic": "X10",
  "viewBox": {
    "h": 552,
    "w": 1281,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S01 minimal 1 actor + 自分宛ては輪として残る (#1227 → #1462) 1`] = `
{
  "edges": [],
  "id": "s01",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 450,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 225,
      "cy": 248,
      "h": 240,
      "id": "s01",
      "kind": "sequence-board",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S01",
  "viewBox": {
    "h": 360,
    "w": 545,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S02 2 actor 1`] = `
{
  "edges": [],
  "id": "s02",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 650,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 325,
      "cy": 248,
      "h": 240,
      "id": "s02",
      "kind": "sequence-board",
      "w": 600,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S02",
  "viewBox": {
    "h": 360,
    "w": 745,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S03 3 actor 1`] = `
{
  "edges": [],
  "id": "s03",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 906,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 453,
      "cy": 280,
      "h": 304,
      "id": "s03",
      "kind": "sequence-board",
      "w": 856,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S03",
  "viewBox": {
    "h": 424,
    "w": 1001,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S04 3 actor + tween animation 1`] = `
{
  "edges": [],
  "id": "s04",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 906,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 453,
      "cy": 280,
      "h": 304,
      "id": "s04",
      "kind": "sequence-board",
      "w": 856,
    },
  ],
  "phases": [
    {
      "duration_ms": 1500,
      "id": "p0",
    },
    {
      "duration_ms": 1500,
      "id": "p1",
    },
  ],
  "states": [
    {
      "id": "seq_step",
      "initial": "0",
    },
    {
      "id": "alice_bal",
      "initial": 100,
    },
    {
      "id": "bob_bal",
      "initial": 0,
    },
  ],
  "topic": "S04",
  "viewBox": {
    "h": 424,
    "w": 1001,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S05 actor inline option (subtitle / eyebrow) 1`] = `
{
  "edges": [],
  "id": "s05",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 630,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 315,
      "cy": 248,
      "h": 240,
      "id": "s05",
      "kind": "sequence-board",
      "w": 580,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S05",
  "viewBox": {
    "h": 360,
    "w": 725,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S06 actor with value placeholder 1`] = `
{
  "edges": [],
  "id": "s06",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 802,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 401,
      "cy": 248,
      "h": 240,
      "id": "s06",
      "kind": "sequence-board",
      "w": 752,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "count",
      "initial": 0,
    },
  ],
  "topic": "S06",
  "viewBox": {
    "h": 360,
    "w": 897,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S07 4 actor pipeline 1`] = `
{
  "edges": [],
  "id": "s07",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 986,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 493,
      "cy": 312,
      "h": 368,
      "id": "s07",
      "kind": "sequence-board",
      "w": 936,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S07",
  "viewBox": {
    "h": 488,
    "w": 1081,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S08 tone variation per edge 1`] = `
{
  "edges": [],
  "id": "s08",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 670,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 335,
      "cy": 344,
      "h": 432,
      "id": "s08",
      "kind": "sequence-board",
      "w": 620,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S08",
  "viewBox": {
    "h": 552,
    "w": 765,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S09 set (string state) animation 1`] = `
{
  "edges": [],
  "id": "s09",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 682,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 341,
      "cy": 248,
      "h": 240,
      "id": "s09",
      "kind": "sequence-board",
      "w": 632,
    },
  ],
  "phases": [
    {
      "duration_ms": 800,
      "id": "p0",
    },
    {
      "duration_ms": 1200,
      "id": "p1",
    },
  ],
  "states": [
    {
      "id": "seq_step",
      "initial": "0",
    },
    {
      "id": "status",
      "initial": "idle",
    },
  ],
  "topic": "S09",
  "viewBox": {
    "h": 360,
    "w": 777,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S10 storage actor rows 1`] = `
{
  "edges": [],
  "id": "s10",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 958,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 479,
      "cy": 280,
      "h": 304,
      "id": "s10",
      "kind": "sequence-board",
      "w": 908,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "a",
      "initial": 100,
    },
    {
      "id": "b",
      "initial": 0,
    },
  ],
  "topic": "S10",
  "viewBox": {
    "h": 424,
    "w": 1053,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S11 5 actor wide diagram 1`] = `
{
  "edges": [],
  "id": "s11",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1250,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 625,
      "cy": 376,
      "h": 496,
      "id": "s11",
      "kind": "sequence-board",
      "w": 1200,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S11",
  "viewBox": {
    "h": 616,
    "w": 1345,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S12 sub label on edge 1`] = `
{
  "edges": [],
  "id": "s12",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 630,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 315,
      "cy": 280,
      "h": 304,
      "id": "s12",
      "kind": "sequence-board",
      "w": 580,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S12",
  "viewBox": {
    "h": 424,
    "w": 725,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S13 labelOffset fine adjust 1`] = `
{
  "edges": [],
  "id": "s13",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 606,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 303,
      "cy": 248,
      "h": 240,
      "id": "s13",
      "kind": "sequence-board",
      "w": 556,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S13",
  "viewBox": {
    "h": 360,
    "w": 701,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S14 viewport explicit width / height 1`] = `
{
  "edges": [],
  "id": "s14",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 634,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 317,
      "cy": 248,
      "h": 240,
      "id": "s14",
      "kind": "sequence-board",
      "w": 584,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "S14",
  "viewBox": {
    "h": 900,
    "w": 1600,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: sequence preset > S15 multi-phase animation 1`] = `
{
  "edges": [],
  "id": "s15",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 874,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 437,
      "cy": 344,
      "h": 432,
      "id": "s15",
      "kind": "sequence-board",
      "w": 824,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "p0",
    },
    {
      "duration_ms": 1000,
      "id": "p1",
    },
    {
      "duration_ms": 1000,
      "id": "p2",
    },
    {
      "duration_ms": 1000,
      "id": "p3",
    },
  ],
  "states": [
    {
      "id": "seq_step",
      "initial": "0",
    },
    {
      "id": "n",
      "initial": 0,
    },
  ],
  "topic": "S15",
  "viewBox": {
    "h": 552,
    "w": 969,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y01 ERC-20 transfer basic 1`] = `
{
  "edges": [],
  "id": "y01",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1250,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 625,
      "cy": 280,
      "h": 304,
      "id": "y01",
      "kind": "sequence-board",
      "w": 1200,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y01",
  "viewBox": {
    "h": 424,
    "w": 1345,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y02 ERC-20 with storage rows 1`] = `
{
  "edges": [],
  "id": "y02",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1038,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 519,
      "cy": 280,
      "h": 304,
      "id": "y02",
      "kind": "sequence-board",
      "w": 988,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [
    {
      "id": "a",
      "initial": 100,
    },
    {
      "id": "b",
      "initial": 0,
    },
  ],
  "topic": "Y02",
  "viewBox": {
    "h": 424,
    "w": 1133,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y03 ERC-721 safeTransferFrom 1`] = `
{
  "edges": [],
  "id": "y03",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1858,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 929,
      "cy": 312,
      "h": 368,
      "id": "y03",
      "kind": "sequence-board",
      "w": 1808,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y03",
  "viewBox": {
    "h": 488,
    "w": 1953,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y04 DeFi swap (DEX) 1`] = `
{
  "edges": [],
  "id": "y04",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1514,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 757,
      "cy": 312,
      "h": 368,
      "id": "y04",
      "kind": "sequence-board",
      "w": 1464,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y04",
  "viewBox": {
    "h": 488,
    "w": 1609,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y05 multisig execute 1`] = `
{
  "edges": [],
  "id": "y05",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1302,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 651,
      "cy": 312,
      "h": 368,
      "id": "y05",
      "kind": "sequence-board",
      "w": 1252,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y05",
  "viewBox": {
    "h": 488,
    "w": 1397,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y06 proxy delegatecall 1`] = `
{
  "edges": [],
  "id": "y06",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 994,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 497,
      "cy": 280,
      "h": 304,
      "id": "y06",
      "kind": "sequence-board",
      "w": 944,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y06",
  "viewBox": {
    "h": 424,
    "w": 1089,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y07 library use 1`] = `
{
  "edges": [],
  "id": "y07",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1138,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 569,
      "cy": 280,
      "h": 304,
      "id": "y07",
      "kind": "sequence-board",
      "w": 1088,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y07",
  "viewBox": {
    "h": 424,
    "w": 1233,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y08 interface call 1`] = `
{
  "edges": [],
  "id": "y08",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1474,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 737,
      "cy": 280,
      "h": 304,
      "id": "y08",
      "kind": "sequence-board",
      "w": 1424,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y08",
  "viewBox": {
    "h": 424,
    "w": 1569,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y09 ERC-20 with full animation 1`] = `
{
  "edges": [],
  "id": "y09",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1738,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 869,
      "cy": 312,
      "h": 368,
      "id": "y09",
      "kind": "sequence-board",
      "w": 1688,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "p0",
    },
    {
      "duration_ms": 1000,
      "id": "p1",
    },
    {
      "duration_ms": 1000,
      "id": "p2",
    },
  ],
  "states": [
    {
      "id": "seq_step",
      "initial": "0",
    },
    {
      "id": "a",
      "initial": 100,
    },
    {
      "id": "b",
      "initial": 0,
    },
  ],
  "topic": "Y09",
  "viewBox": {
    "h": 488,
    "w": 1833,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y10 reentrancy victim shape 1`] = `
{
  "edges": [],
  "id": "y10",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1270,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 635,
      "cy": 344,
      "h": 432,
      "id": "y10",
      "kind": "sequence-board",
      "w": 1220,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y10",
  "viewBox": {
    "h": 552,
    "w": 1365,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y11 ERC-1155 batch transfer 1`] = `
{
  "edges": [],
  "id": "y11",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1682,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 841,
      "cy": 280,
      "h": 304,
      "id": "y11",
      "kind": "sequence-board",
      "w": 1632,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y11",
  "viewBox": {
    "h": 424,
    "w": 1777,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y12 access control onlyOwner 1`] = `
{
  "edges": [],
  "id": "y12",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1042,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 521,
      "cy": 280,
      "h": 304,
      "id": "y12",
      "kind": "sequence-board",
      "w": 992,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y12",
  "viewBox": {
    "h": 424,
    "w": 1137,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y13 bridge node + relayer 1`] = `
{
  "edges": [],
  "id": "y13",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 966,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 483,
      "cy": 280,
      "h": 304,
      "id": "y13",
      "kind": "sequence-board",
      "w": 916,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y13",
  "viewBox": {
    "h": 424,
    "w": 1061,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y14 storage value placeholder + animation 1`] = `
{
  "edges": [],
  "id": "y14",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 802,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 401,
      "cy": 248,
      "h": 240,
      "id": "y14",
      "kind": "sequence-board",
      "w": 752,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "p0",
    },
  ],
  "states": [
    {
      "id": "seq_step",
      "initial": "0",
    },
    {
      "id": "n",
      "initial": 0,
    },
  ],
  "topic": "Y14",
  "viewBox": {
    "h": 360,
    "w": 897,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: solidity preset > Y15 complex 5 actor + nested guard 1`] = `
{
  "edges": [],
  "id": "y15",
  "lanes": [
    {
      "height": 40,
      "id": "seq",
      "width": 1582,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 791,
      "cy": 344,
      "h": 432,
      "id": "y15",
      "kind": "sequence-board",
      "w": 1532,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "sequence",
    },
  ],
  "states": [],
  "topic": "Y15",
  "viewBox": {
    "h": 552,
    "w": 1677,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: state preset > M01 minimal Idle → Done 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "t0-idle-done",
      "label": "go",
      "to": "done",
    },
  ],
  "id": "m01",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-done",
      "width": 370,
      "x": 534,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 719,
      "cy": 184,
      "h": 112,
      "id": "done",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M01",
  "viewBox": {
    "h": 232,
    "w": 999,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: state preset > M02 Idle / Loading / Done 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "t0-idle-loading",
      "label": "submit",
      "to": "loading",
    },
    {
      "from": "loading",
      "id": "t1-loading-done",
      "label": "ok",
      "to": "done",
    },
  ],
  "id": "m02",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-loading",
      "width": 370,
      "x": 594,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-done",
      "width": 370,
      "x": 1188,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 779,
      "cy": 184,
      "h": 112,
      "id": "loading",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1373,
      "cy": 184,
      "h": 112,
      "id": "done",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M02",
  "viewBox": {
    "h": 232,
    "w": 1653,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: state preset > M03 with error path 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "t0-idle-loading",
      "label": "submit",
      "to": "loading",
    },
    {
      "from": "loading",
      "id": "t1-loading-done",
      "label": "success",
      "to": "done",
    },
    {
      "from": "loading",
      "id": "t2-loading-error",
      "label": "fail",
      "to": "error",
    },
  ],
  "id": "m03",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-loading",
      "width": 370,
      "x": 606,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-done",
      "width": 370,
      "x": 1212,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-error",
      "width": 370,
      "x": 1818,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 791,
      "cy": 184,
      "h": 112,
      "id": "loading",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1397,
      "cy": 184,
      "h": 112,
      "id": "done",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 2003,
      "cy": 184,
      "h": 112,
      "id": "error",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M03",
  "viewBox": {
    "h": 334,
    "w": 2283,
    "x": -35,
    "y": -34,
  },
}
`;

exports[`golden: state preset > M04 guard on transition 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "t0-idle-auth",
      "label": "login",
      "to": "auth",
    },
    {
      "from": "idle",
      "id": "t1-idle-denied",
      "label": "noCreds",
      "to": "denied",
    },
  ],
  "id": "m04",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-auth",
      "width": 370,
      "x": 664,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-denied",
      "width": 370,
      "x": 1328,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 849,
      "cy": 184,
      "h": 112,
      "id": "auth",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1513,
      "cy": 184,
      "h": 112,
      "id": "denied",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M04",
  "viewBox": {
    "h": 366,
    "w": 1793,
    "x": -35,
    "y": -66,
  },
}
`;

exports[`golden: state preset > M05 cyclic states 1`] = `
{
  "edges": [
    {
      "from": "on",
      "id": "t0-on-off",
      "label": "toggle",
      "to": "off",
    },
    {
      "from": "off",
      "id": "t1-off-on",
      "label": "toggle",
      "to": "on",
    },
  ],
  "id": "m05",
  "lanes": [
    {
      "height": 40,
      "id": "lane-on",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-off",
      "width": 370,
      "x": 588,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "on",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 773,
      "cy": 184,
      "h": 112,
      "id": "off",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M05",
  "viewBox": {
    "h": 384,
    "w": 1053,
    "x": -35,
    "y": -84,
  },
}
`;

exports[`golden: state preset > M06 multiple initial-like layout 1`] = `
{
  "edges": [
    {
      "from": "start",
      "id": "t0-start-a",
      "label": "left",
      "to": "a",
    },
    {
      "from": "start",
      "id": "t1-start-b",
      "label": "right",
      "to": "b",
    },
    {
      "from": "a",
      "id": "t2-a-end",
      "label": "ok",
      "to": "end",
    },
    {
      "from": "b",
      "id": "t3-b-end",
      "label": "ok",
      "to": "end",
    },
  ],
  "id": "m06",
  "lanes": [
    {
      "height": 40,
      "id": "lane-start",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-a",
      "width": 370,
      "x": 616,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-b",
      "width": 370,
      "x": 1232,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-end",
      "width": 370,
      "x": 1848,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "start",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 801,
      "cy": 184,
      "h": 112,
      "id": "a",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1417,
      "cy": 184,
      "h": 112,
      "id": "b",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 2033,
      "cy": 184,
      "h": 112,
      "id": "end",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M06",
  "viewBox": {
    "h": 334,
    "w": 2313,
    "x": -35,
    "y": -34,
  },
}
`;

exports[`golden: state preset > M07 with state counter + tween 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "e0-idle-run",
      "label": "start",
      "to": "run",
    },
    {
      "from": "run",
      "id": "e1-run-done",
      "label": "end",
      "to": "done",
    },
  ],
  "id": "m07",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-run",
      "width": 370,
      "x": 566,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-done",
      "width": 370,
      "x": 1132,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 751,
      "cy": 184,
      "h": 112,
      "id": "run",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1317,
      "cy": 184,
      "h": 112,
      "id": "done",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "start",
    },
  ],
  "states": [
    {
      "id": "counter",
      "initial": 0,
    },
  ],
  "topic": "M07",
  "viewBox": {
    "h": 232,
    "w": 1597,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: state preset > M08 5 state diamond 1`] = `
{
  "edges": [
    {
      "from": "s0",
      "id": "t0-s0-l",
      "label": "left",
      "to": "l",
    },
    {
      "from": "s0",
      "id": "t1-s0-r",
      "label": "right",
      "to": "r",
    },
    {
      "from": "l",
      "id": "t2-l-merge",
      "label": "join1",
      "to": "merge",
    },
    {
      "from": "r",
      "id": "t3-r-merge",
      "label": "join2",
      "to": "merge",
    },
    {
      "from": "merge",
      "id": "t4-merge-end",
      "label": "done",
      "to": "end",
    },
  ],
  "id": "m08",
  "lanes": [
    {
      "height": 40,
      "id": "lane-s0",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-l",
      "width": 370,
      "x": 618,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-r",
      "width": 370,
      "x": 1236,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-merge",
      "width": 370,
      "x": 1854,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-end",
      "width": 370,
      "x": 2472,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "s0",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 803,
      "cy": 184,
      "h": 112,
      "id": "l",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1421,
      "cy": 184,
      "h": 112,
      "id": "r",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 2039,
      "cy": 184,
      "h": 112,
      "id": "merge",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 2657,
      "cy": 184,
      "h": 112,
      "id": "end",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M08",
  "viewBox": {
    "h": 334,
    "w": 2937,
    "x": -35,
    "y": -34,
  },
}
`;

exports[`golden: state preset > M09 自己遷移は輪として残る (#1227 → #1462) 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "t0-idle-wait",
      "label": "enter",
      "to": "wait",
    },
    {
      "from": "wait",
      "id": "t1-wait-wait",
      "label": "tick",
      "to": "wait",
    },
    {
      "from": "wait",
      "id": "t2-wait-done",
      "label": "exit",
      "to": "done",
    },
  ],
  "id": "m09",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-wait",
      "width": 370,
      "x": 574,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-done",
      "width": 370,
      "x": 1148,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 759,
      "cy": 184,
      "h": 112,
      "id": "wait",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1333,
      "cy": 184,
      "h": 112,
      "id": "done",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "fsm",
    },
  ],
  "states": [],
  "topic": "M09",
  "viewBox": {
    "h": 362,
    "w": 1613,
    "x": -35,
    "y": -62,
  },
}
`;

exports[`golden: state preset > M10 with set on transition phase 1`] = `
{
  "edges": [
    {
      "from": "idle",
      "id": "e0-idle-active",
      "label": "on",
      "to": "active",
    },
    {
      "from": "active",
      "id": "e1-active-off",
      "label": "stop",
      "to": "off",
    },
  ],
  "id": "m10",
  "lanes": [
    {
      "height": 40,
      "id": "lane-idle",
      "width": 370,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-active",
      "width": 370,
      "x": 560,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-off",
      "width": 370,
      "x": 1120,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 185,
      "cy": 184,
      "h": 112,
      "id": "idle",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 745,
      "cy": 184,
      "h": 112,
      "id": "active",
      "kind": "card",
      "w": 320,
    },
    {
      "cx": 1305,
      "cy": 184,
      "h": 112,
      "id": "off",
      "kind": "card",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "on",
    },
    {
      "duration_ms": 1000,
      "id": "off",
    },
  ],
  "states": [
    {
      "id": "mode",
      "initial": "idle",
    },
  ],
  "topic": "M10",
  "viewBox": {
    "h": 232,
    "w": 1585,
    "x": -35,
    "y": 68,
  },
}
`;

exports[`golden: swimlane preset > L01 2 lane 1`] = `
{
  "edges": [
    {
      "from": "svca",
      "id": "e0-svca-svcb",
      "label": "call",
      "to": "svcb",
    },
  ],
  "id": "l01",
  "lanes": [
    {
      "height": 40,
      "id": "svca",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "svcb",
      "width": 400,
      "x": 550,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "svca",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 750,
      "cy": 155,
      "h": 54,
      "id": "svcb",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L01",
  "viewBox": {
    "h": 266,
    "w": 1054,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L02 3 lane 1`] = `
{
  "edges": [
    {
      "from": "svca",
      "id": "e0-svca-svcb",
      "label": "dispatch",
      "to": "svcb",
    },
    {
      "from": "svcb",
      "id": "e1-svcb-svcc",
      "label": "forward",
      "to": "svcc",
    },
  ],
  "id": "l02",
  "lanes": [
    {
      "height": 40,
      "id": "svca",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "svcb",
      "width": 400,
      "x": 618,
      "y": 28,
    },
    {
      "height": 40,
      "id": "svcc",
      "width": 400,
      "x": 1236,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "svca",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 818,
      "cy": 155,
      "h": 54,
      "id": "svcb",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1436,
      "cy": 155,
      "h": 54,
      "id": "svcc",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L02",
  "viewBox": {
    "h": 266,
    "w": 1740,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L03 4 lane with all info tone 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "1",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e1-b-c",
      "label": "2",
      "to": "c",
    },
    {
      "from": "c",
      "id": "e2-c-d",
      "label": "3",
      "to": "d",
    },
  ],
  "id": "l03",
  "lanes": [
    {
      "height": 40,
      "id": "a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "b",
      "width": 400,
      "x": 528,
      "y": 28,
    },
    {
      "height": 40,
      "id": "c",
      "width": 400,
      "x": 1056,
      "y": 28,
    },
    {
      "height": 40,
      "id": "d",
      "width": 400,
      "x": 1584,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 728,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1256,
      "cy": 155,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1784,
      "cy": 155,
      "h": 54,
      "id": "d",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L03",
  "viewBox": {
    "h": 266,
    "w": 2088,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L04 inline option subtitle 1`] = `
{
  "edges": [
    {
      "from": "front",
      "id": "e0-front-back",
      "label": "GET /x",
      "to": "back",
    },
  ],
  "id": "l04",
  "lanes": [
    {
      "height": 40,
      "id": "front",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "back",
      "width": 400,
      "x": 592,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 169,
      "h": 82,
      "id": "front",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 792,
      "cy": 169,
      "h": 82,
      "id": "back",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L04",
  "viewBox": {
    "h": 294,
    "w": 1096,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L05 animation focus + badge 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "dispatch",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e1-b-c",
      "label": "forward",
      "to": "c",
    },
  ],
  "id": "l05",
  "lanes": [
    {
      "height": 40,
      "id": "lane-a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-b",
      "width": 400,
      "x": 618,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-c",
      "width": 400,
      "x": 1236,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 818,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1436,
      "cy": 155,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1500,
      "id": "p1",
    },
    {
      "duration_ms": 1500,
      "id": "p2",
    },
  ],
  "states": [],
  "topic": "L05",
  "viewBox": {
    "h": 266,
    "w": 1740,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L06 5 service lane 1`] = `
{
  "edges": [
    {
      "from": "s1",
      "id": "e0-s1-s2",
      "label": "a",
      "to": "s2",
    },
    {
      "from": "s2",
      "id": "e1-s2-s3",
      "label": "b",
      "to": "s3",
    },
    {
      "from": "s3",
      "id": "e2-s3-s4",
      "label": "c",
      "to": "s4",
    },
    {
      "from": "s4",
      "id": "e3-s4-s5",
      "label": "d",
      "to": "s5",
    },
  ],
  "id": "l06",
  "lanes": [
    {
      "height": 40,
      "id": "s1",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "s2",
      "width": 400,
      "x": 528,
      "y": 28,
    },
    {
      "height": 40,
      "id": "s3",
      "width": 400,
      "x": 1056,
      "y": 28,
    },
    {
      "height": 40,
      "id": "s4",
      "width": 400,
      "x": 1584,
      "y": 28,
    },
    {
      "height": 40,
      "id": "s5",
      "width": 400,
      "x": 2112,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "s1",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 728,
      "cy": 155,
      "h": 54,
      "id": "s2",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1256,
      "cy": 155,
      "h": 54,
      "id": "s3",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1784,
      "cy": 155,
      "h": 54,
      "id": "s4",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 2312,
      "cy": 155,
      "h": 54,
      "id": "s5",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L06",
  "viewBox": {
    "h": 266,
    "w": 2616,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L07 mixed kind (api / function) 1`] = `
{
  "edges": [
    {
      "from": "web",
      "id": "e0-web-worker",
      "label": "enqueue",
      "to": "worker",
    },
    {
      "from": "worker",
      "id": "e1-worker-storage",
      "label": "write",
      "to": "storage",
    },
  ],
  "id": "l07",
  "lanes": [
    {
      "height": 40,
      "id": "web",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "worker",
      "width": 430,
      "x": 631,
      "y": 28,
    },
    {
      "height": 40,
      "id": "storage",
      "width": 450,
      "x": 1267,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 168,
      "h": 79,
      "id": "web",
      "kind": "api",
      "w": 320,
    },
    {
      "cx": 846,
      "cy": 168,
      "h": 79,
      "id": "worker",
      "kind": "function",
      "w": 380,
    },
    {
      "cx": 1492,
      "cy": 168,
      "h": 79,
      "id": "storage",
      "kind": "storage",
      "w": 400,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L07",
  "viewBox": {
    "h": 291,
    "w": 1821,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L08 back-edge across lane 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "forward",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e1-b-c",
      "label": "next",
      "to": "c",
    },
    {
      "from": "c",
      "id": "e2-c-a",
      "label": "back",
      "to": "a",
    },
  ],
  "id": "l08",
  "lanes": [
    {
      "height": 40,
      "id": "a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "b",
      "width": 400,
      "x": 646,
      "y": 28,
    },
    {
      "height": 40,
      "id": "c",
      "width": 400,
      "x": 1292,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 846,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1492,
      "cy": 155,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L08",
  "viewBox": {
    "h": 283,
    "w": 1796,
    "x": -44,
    "y": -34,
  },
}
`;

exports[`golden: swimlane preset > L09 sub label on lane edge 1`] = `
{
  "edges": [
    {
      "from": "l",
      "id": "e0-l-r",
      "label": "send",
      "to": "r",
    },
  ],
  "id": "l09",
  "lanes": [
    {
      "height": 40,
      "id": "l",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "r",
      "width": 400,
      "x": 566,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "l",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 766,
      "cy": 155,
      "h": 54,
      "id": "r",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L09",
  "viewBox": {
    "h": 266,
    "w": 1070,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L10 6 lane with viewport 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e1-b-c",
      "label": "",
      "to": "c",
    },
    {
      "from": "c",
      "id": "e2-c-d",
      "label": "",
      "to": "d",
    },
    {
      "from": "d",
      "id": "e3-d-e",
      "label": "",
      "to": "e",
    },
    {
      "from": "e",
      "id": "e4-e-f",
      "label": "",
      "to": "f",
    },
  ],
  "id": "l10",
  "lanes": [
    {
      "height": 40,
      "id": "a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "b",
      "width": 400,
      "x": 528,
      "y": 28,
    },
    {
      "height": 40,
      "id": "c",
      "width": 400,
      "x": 1056,
      "y": 28,
    },
    {
      "height": 40,
      "id": "d",
      "width": 400,
      "x": 1584,
      "y": 28,
    },
    {
      "height": 40,
      "id": "e",
      "width": 400,
      "x": 2112,
      "y": 28,
    },
    {
      "height": 40,
      "id": "f",
      "width": 400,
      "x": 2640,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 728,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1256,
      "cy": 155,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1784,
      "cy": 155,
      "h": 54,
      "id": "d",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 2312,
      "cy": 155,
      "h": 54,
      "id": "e",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 2840,
      "cy": 155,
      "h": 54,
      "id": "f",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L10",
  "viewBox": {
    "h": 800,
    "w": 3144,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L11 tone variation 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "ok",
      "to": "b",
    },
    {
      "from": "b",
      "id": "e1-b-c",
      "label": "warn",
      "to": "c",
    },
  ],
  "id": "l11",
  "lanes": [
    {
      "height": 40,
      "id": "a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "b",
      "width": 400,
      "x": 568,
      "y": 28,
    },
    {
      "height": 40,
      "id": "c",
      "width": 400,
      "x": 1136,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 768,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1336,
      "cy": 155,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L11",
  "viewBox": {
    "h": 266,
    "w": 1640,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L12 with state + tween 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "send",
      "to": "b",
    },
  ],
  "id": "l12",
  "lanes": [
    {
      "height": 40,
      "id": "lane-a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "lane-b",
      "width": 400,
      "x": 566,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 766,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "tx",
    },
  ],
  "states": [
    {
      "id": "n",
      "initial": 0,
    },
  ],
  "topic": "L12",
  "viewBox": {
    "h": 266,
    "w": 1070,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L13 labelOffset on swimlane 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "e0-a-b",
      "label": "x",
      "to": "b",
    },
  ],
  "id": "l13",
  "lanes": [
    {
      "height": 40,
      "id": "a",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "b",
      "width": 400,
      "x": 528,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 728,
      "cy": 155,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L13",
  "viewBox": {
    "h": 266,
    "w": 1032,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L14 single lane 自己ループは輪として残る (#1227 → #1462) 1`] = `
{
  "edges": [
    {
      "from": "solo",
      "id": "e0-solo-solo",
      "label": "retry",
      "to": "solo",
    },
  ],
  "id": "l14",
  "lanes": [
    {
      "height": 40,
      "id": "solo",
      "width": 400,
      "x": 0,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "solo",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L14",
  "viewBox": {
    "h": 266,
    "w": 680,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: swimlane preset > L15 mixed person + service 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "e0-user-web",
      "label": "open",
      "to": "web",
    },
    {
      "from": "web",
      "id": "e1-web-api",
      "label": "fetch",
      "to": "api",
    },
  ],
  "id": "l15",
  "lanes": [
    {
      "height": 40,
      "id": "user",
      "width": 400,
      "x": 0,
      "y": 28,
    },
    {
      "height": 40,
      "id": "web",
      "width": 400,
      "x": 572,
      "y": 28,
    },
    {
      "height": 40,
      "id": "api",
      "width": 400,
      "x": 1144,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 200,
      "cy": 155,
      "h": 54,
      "id": "user",
      "kind": "person",
      "w": 280,
    },
    {
      "cx": 772,
      "cy": 155,
      "h": 54,
      "id": "web",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 1344,
      "cy": 155,
      "h": 54,
      "id": "api",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 1000,
      "id": "static",
    },
  ],
  "states": [],
  "topic": "L15",
  "viewBox": {
    "h": 266,
    "w": 1648,
    "x": -44,
    "y": -24,
  },
}
`;

exports[`golden: topology preset > T01 simple 2 node 1`] = `
{
  "edges": [
    {
      "from": "browser",
      "id": "c0-browser-api",
      "label": "HTTPS",
      "to": "api",
    },
  ],
  "id": "t01",
  "lanes": [
    {
      "height": 304,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "browser",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "api",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T01",
  "viewBox": {
    "h": 416,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T02 3 node chain 1`] = `
{
  "edges": [
    {
      "from": "browser",
      "id": "c0-browser-api",
      "label": "HTTPS",
      "to": "api",
    },
    {
      "from": "api",
      "id": "c1-api-db",
      "label": "SQL",
      "to": "db",
    },
  ],
  "id": "t02",
  "lanes": [
    {
      "height": 514,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "browser",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "api",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 491,
      "h": 110,
      "id": "db",
      "kind": "database",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T02",
  "viewBox": {
    "h": 626,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T03 with cache layer 1`] = `
{
  "edges": [
    {
      "from": "web",
      "id": "c0-web-cache",
      "label": "GET",
      "to": "cache",
    },
    {
      "from": "cache",
      "id": "c1-cache-db",
      "label": "MISS",
      "to": "db",
    },
  ],
  "id": "t03",
  "lanes": [
    {
      "height": 514,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "web",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "cache",
      "kind": "cache",
      "w": 280,
    },
    {
      "cx": 230,
      "cy": 491,
      "h": 110,
      "id": "db",
      "kind": "database",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T03",
  "viewBox": {
    "h": 626,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T04 queue + worker 1`] = `
{
  "edges": [
    {
      "from": "producer",
      "id": "c0-producer-q",
      "label": "enqueue",
      "to": "q",
    },
    {
      "from": "q",
      "id": "c1-q-worker",
      "label": "dequeue",
      "to": "worker",
    },
  ],
  "id": "t04",
  "lanes": [
    {
      "height": 458,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "producer",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "q",
      "kind": "queue",
      "w": 340,
    },
    {
      "cx": 230,
      "cy": 463,
      "h": 54,
      "id": "worker",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T04",
  "viewBox": {
    "h": 570,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T05 cdn + origin 1`] = `
{
  "edges": [
    {
      "from": "user",
      "id": "c0-user-cdn",
      "label": "GET",
      "to": "cdn",
    },
    {
      "from": "cdn",
      "id": "c1-cdn-origin",
      "label": "MISS",
      "to": "origin",
    },
  ],
  "id": "t05",
  "lanes": [
    {
      "height": 458,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "user",
      "kind": "person",
      "w": 280,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "cdn",
      "kind": "cdn",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 463,
      "h": 54,
      "id": "origin",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T05",
  "viewBox": {
    "h": 570,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T06 microservice mesh 1`] = `
{
  "edges": [
    {
      "from": "gw",
      "id": "c0-gw-svc1",
      "label": "/a",
      "to": "svc1",
    },
    {
      "from": "gw",
      "id": "c1-gw-svc2",
      "label": "/b",
      "to": "svc2",
    },
    {
      "from": "gw",
      "id": "c2-gw-svc3",
      "label": "/c",
      "to": "svc3",
    },
  ],
  "id": "t06",
  "lanes": [
    {
      "height": 612,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "gw",
      "kind": "api",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "svc1",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 463,
      "h": 54,
      "id": "svc2",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 617,
      "h": 54,
      "id": "svc3",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T06",
  "viewBox": {
    "h": 724,
    "w": 626,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T07 with viewport explicit 1`] = `
{
  "edges": [
    {
      "from": "front",
      "id": "c0-front-mid",
      "label": "",
      "to": "mid",
    },
    {
      "from": "mid",
      "id": "c1-mid-back",
      "label": "",
      "to": "back",
    },
  ],
  "id": "t07",
  "lanes": [
    {
      "height": 514,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "front",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "mid",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 491,
      "h": 110,
      "id": "back",
      "kind": "database",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T07",
  "viewBox": {
    "h": 1000,
    "w": 1600,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T08 with top-level lanes group 1`] = `
{
  "edges": [
    {
      "from": "a",
      "id": "c0-a-b",
      "label": "call",
      "to": "b",
    },
  ],
  "id": "t08",
  "lanes": [
    {
      "height": 360,
      "id": "main",
      "width": 480,
      "x": 0,
      "y": 60,
    },
    {
      "height": 100,
      "id": "group-cloud",
      "width": 1060,
      "x": 520,
      "y": -12,
    },
    {
      "height": 40,
      "id": "l1",
      "width": 480,
      "x": 540,
      "y": 28,
    },
    {
      "height": 40,
      "id": "aws",
      "width": 480,
      "x": 1080,
      "y": 28,
    },
  ],
  "nodes": [
    {
      "cx": 240,
      "cy": 155,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 240,
      "cy": 365,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T08",
  "viewBox": {
    "h": 900,
    "w": 1684,
    "x": -44,
    "y": -64,
  },
}
`;

exports[`golden: topology preset > T09 multi-tier (cdn → web → cache → db) 1`] = `
{
  "edges": [
    {
      "from": "cdn",
      "id": "c0-cdn-web",
      "label": "edge",
      "to": "web",
    },
    {
      "from": "web",
      "id": "c1-web-cache",
      "label": "lookup",
      "to": "cache",
    },
    {
      "from": "cache",
      "id": "c2-cache-db",
      "label": "miss",
      "to": "db",
    },
  ],
  "id": "t09",
  "lanes": [
    {
      "height": 668,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "cdn",
      "kind": "cdn",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "web",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 463,
      "h": 54,
      "id": "cache",
      "kind": "cache",
      "w": 280,
    },
    {
      "cx": 230,
      "cy": 645,
      "h": 110,
      "id": "db",
      "kind": "database",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T09",
  "viewBox": {
    "h": 780,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;

exports[`golden: topology preset > T10 7 node fan-out 1`] = `
{
  "edges": [
    {
      "from": "hub",
      "id": "c0-hub-a",
      "label": "",
      "to": "a",
    },
    {
      "from": "hub",
      "id": "c1-hub-b",
      "label": "",
      "to": "b",
    },
    {
      "from": "hub",
      "id": "c2-hub-c",
      "label": "",
      "to": "c",
    },
    {
      "from": "hub",
      "id": "c3-hub-d",
      "label": "",
      "to": "d",
    },
    {
      "from": "hub",
      "id": "c4-hub-e",
      "label": "",
      "to": "e",
    },
    {
      "from": "hub",
      "id": "c5-hub-f",
      "label": "",
      "to": "f",
    },
  ],
  "id": "t10",
  "lanes": [
    {
      "height": 1074,
      "id": "main",
      "width": 460,
      "x": 0,
      "y": 60,
    },
  ],
  "nodes": [
    {
      "cx": 230,
      "cy": 155,
      "h": 54,
      "id": "hub",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 309,
      "h": 54,
      "id": "a",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 463,
      "h": 54,
      "id": "b",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 617,
      "h": 54,
      "id": "c",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 771,
      "h": 54,
      "id": "d",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 925,
      "h": 54,
      "id": "e",
      "kind": "service",
      "w": 320,
    },
    {
      "cx": 230,
      "cy": 1079,
      "h": 54,
      "id": "f",
      "kind": "service",
      "w": 320,
    },
  ],
  "phases": [
    {
      "duration_ms": 2400,
      "id": "topo",
    },
  ],
  "states": [],
  "topic": "T10",
  "viewBox": {
    "h": 1186,
    "w": 564,
    "x": -44,
    "y": 8,
  },
}
`;
